--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch Cam"
+        android:id="@+id/toggleCamera"
+        android:checked="false"
+        android:clickable="true"
+        android:textOn="Swap"
+        android:textOff="Swap"
+        android:onClick="onCameraChange"/>
+
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/toggleMuteCamera"
+        android:checked="false"
+        android:clickable="true"
+        android:textOn="Unmute"
+        android:textOff="Mute"
+        android:onClick="onCameraMute"
+        android:layout_toRightOf="@+id/toggleCamera"
+        android:layout_toEndOf="@+id/toggleCamera"
+        />
+
+    <Chronometer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chronometer"
+        android:layout_alignBottom="@+id/toggleMuteCamera"
+        android:layout_toRightOf="@+id/toggleMuteCamera"
+        android:layout_above="@+id/videoView"
+        android:layout_toLeftOf="@+id/toggleButton"
+        android:layout_toStartOf="@+id/toggleButton"
+        android:textAlignment="gravity"
+        android:layout_alignTop="@+id/toggleMuteCamera"
+        android:textSize="@dimen/abc_dialog_padding_material"
+        android:gravity="center_vertical|center_horizontal" />
 
     <ToggleButton
         android:layout_width="wrap_content"
@@ -21,6 +56,7 @@
         android:onClick="onLogin"
         android:textOn="Logoff"
         android:textOff="Login" />
+
 
     <android.opengl.GLSurfaceView
         android:layout_width="wrap_content"
