Make an example of showing presentation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,4 +66,11 @@
         android:id="@+id/videoView"
         android:layout_below="@+id/toggleButton" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:visibility="invisible" />
+
 </RelativeLayout>
