--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:clickable="true"
-    android:onClick="onSelfviewClick">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <ToggleButton
         android:layout_width="wrap_content"
@@ -64,7 +62,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/videoView"
-        android:layout_below="@+id/toggleButton" />
+        android:layout_below="@+id/toggleButton"
+        android:clickable="true"
+        android:onClick="onSelfviewClick"
+        />
 
     <ImageView
         android:layout_width="match_parent"
