--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,138 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ToggleButton
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/id_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/main.collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/id_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:weightSum="1"
+                android:background="?attr/colorAccent">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/toggleCamera"
+                    android:clickable="true"
+                    android:onClick="onCameraChange"
+                    android:src="@drawable/ic_switch_camera"
+                    style="@android:style/Widget.Holo.ImageButton" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/toggleMuteCamera"
+                    android:clickable="true"
+                    android:src="@drawable/ic_mic_off"
+                    android:onClick="onCameraMute"
+                    android:layout_toRightOf="@+id/toggleCamera"
+                    android:layout_toEndOf="@+id/toggleCamera"
+                    style="@android:style/Widget.Holo.ImageButton" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/toggleButton"
+                    android:onClick="onLogin"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_call_black"
+                    style="@android:style/Widget.Holo.ImageButton"
+                    android:adjustViewBounds="false" />
+
+                <Chronometer
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/chronometer"
+                    android:textAlignment="gravity"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textAllCaps="false"
+                    android:layout_weight="1.0" />
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+    android:id="@+id/id_viewpager"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@android:color/background_light">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <com.pexip.example.AspectFrameLayout
+            android:id="@+id/videoFrameLayout"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.opengl.GLSurfaceView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/videoView"
+                android:layout_alignParentTop="true"
+                android:clickable="true"
+                android:onClick="onSelfviewClick"
+                />
+        </com.pexip.example.AspectFrameLayout>
+        <com.pexip.example.AspectFrameLayout
+            android:id="@+id/presentationLayout"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                />
+
+        </com.pexip.example.AspectFrameLayout>
+        <ListView
+            android:id="@+id/participantList"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent" />
+
+    </LinearLayout>
+
+    </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Switch Cam"
-        android:id="@+id/toggleCamera"
-        android:checked="false"
         android:clickable="true"
-        android:textOn="Swap"
-        android:textOff="Swap"
-        android:onClick="onCameraChange"/>
-
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/toggleMuteCamera"
-        android:checked="false"
-        android:clickable="true"
-        android:textOn="Unmute"
-        android:textOff="Mute"
-        android:onClick="onCameraMute"
-        android:layout_toRightOf="@+id/toggleCamera"
-        android:layout_toEndOf="@+id/toggleCamera"
-        />
-
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer"
-        android:layout_alignBottom="@+id/toggleMuteCamera"
-        android:layout_toRightOf="@+id/toggleMuteCamera"
-        android:layout_above="@+id/videoView"
-        android:layout_toLeftOf="@+id/toggleButton"
-        android:layout_toStartOf="@+id/toggleButton"
-        android:textAlignment="gravity"
-        android:layout_alignTop="@+id/toggleMuteCamera"
-        android:textSize="@dimen/abc_dialog_padding_material"
-        android:gravity="center_vertical|center_horizontal" />
-
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/toggleButton"
-        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_add_picture"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:checked="false"
-        android:clickable="true"
-        android:onClick="onLogin"
-        android:textOn="Logoff"
-        android:textOff="Login" />
-
-
-    <android.opengl.GLSurfaceView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/videoView"
-        android:layout_below="@+id/toggleButton"
-        android:clickable="true"
-        android:onClick="onSelfviewClick"
+        android:id="@+id/addPresentation"
+        android:onClick="onPostPresentation"
+        app:elevation="13dp"
+        app:layout_anchor="@+id/id_viewpager"
+        app:layout_anchorGravity="bottom|end"
+        android:layout_gravity="bottom|end"
         />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_alignParentBottom="true"
-        android:visibility="invisible" />
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
